--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-include completion/pycd-completion.bash completion/pypack-completion.bash completion/_pycd completion/_pypack
+recursive-include completion *
