--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ python: 2.7
 
 before_install:
   - pip install -r requirements.txt
-  - pip install nose flake8 hacking coveralls
 
 install:
   - python setup.py install
 
 before_script:
-  - flake8 pycd
+  - pip install -q nose hacking coveralls
 
 script:
+  - flake8 pycd
   - nosetests --with-coverage --cover-package=pycd
 
 after_success:
